--- a/SeoulTrail/app/src/main/res/layout/community_activity.xml
+++ b/SeoulTrail/app/src/main/res/layout/community_activity.xml
@@ -9,22 +9,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
         android:layout_marginBottom="20dp"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:background="@drawable/border"
-            android:layout_marginBottom="10dp">
+            android:background="@drawable/border">
             <ImageView
                 android:id="@+id/user_icon"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/btn04_profile_off"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:paddingLeft="5dp"/>
             <LinearLayout
                 android:id="@+id/layout_posting"
@@ -37,11 +35,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="닉네임을 적어주세요"
-                    android:textSize="20sp"/>
+                    android:paddingTop="3dp"
+                    android:textSize="16sp"/>
                 <EditText
                     android:id="@+id/write_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="-5dp"
+                    android:layout_marginLeft="-5dp"
                     android:hint="설정한 닉네임으로 다른 사람들과 소통할 수 있어요"
                     android:textSize="10sp"/>
                 <ImageView
@@ -56,22 +57,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="@drawable/border"
+            android:padding="5dp">
             <ImageView
                 android:id="@+id/set_picture"
                 android:layout_width="0dp"
-                android:layout_height="15dp"
+                android:layout_height="20dp"
                 android:layout_gravity="start"
                 android:layout_weight="0.5"
-                android:src="@drawable/btn01_upload_off"/>
+                android:src="@drawable/image_profile_setting"/>
             <TextView
                 android:layout_width="0dp"
-                android:layout_height="15dp"
+                android:layout_height="20dp"
                 android:layout_weight="1"/>
             <Button
                 android:id="@+id/send_btn"
                 android:layout_width="0dp"
-                android:layout_height="15dp"
+                android:layout_height="20dp"
                 android:layout_weight="0.2"
                 android:background="@drawable/btn04_setting_off"/>
         </LinearLayout>
