--- a/SeoulTrail/app/src/main/res/layout/faq_depth1_group.xml
+++ b/SeoulTrail/app/src/main/res/layout/faq_depth1_group.xml
@@ -8,12 +8,24 @@
         android:id="@+id/depth1_icon"
         android:layout_width="40dp"
         android:layout_height="40dp"/>
-    <TextView
-        android:id="@+id/listTitle"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
-        android:textSize="25sp"
-        android:paddingTop="5dp"
-        android:paddingLeft="5dp"/>
+        android:orientation="vertical"
+        android:paddingLeft="5dp">
+
+        <TextView
+            android:id="@+id/list_title"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"/>
+
+        <TextView
+            android:id="@+id/list_title_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"/>
+    </LinearLayout>
+
 </LinearLayout>
